static/css/commentIcon.css
#commentIcons {
  position: relative;
  display: block;
  z-index: 1;
  left: 760px;
}

.comment-icon-line {
  position: absolute;
}
.comment-icon {
  background-repeat: no-repeat;
  display: inline-block;
  height: 16px;
  vertical-align: middle;
  width: 16px;
  margin-right: 5px;
}
.comment-icon:before {
  font-family: "fontawesome-etherpad";
  content: "\e829";
  color:#666;
  font-size:14px;
  padding-top:2px;
  line-height:17px;
}

.comment-icon.with-reply:before {
  content: "\e828";
}

.comment-icon.active:before {
  color:orange;
}

